RESOLVED FIXED 111186
[CSS Exclusions] Incorrect margin corner radii formula
https://bugs.webkit.org/show_bug.cgi?id=111186
Summary [CSS Exclusions] Incorrect margin corner radii formula
Hans Muller
Reported 2013-03-01 08:44:43 PST
Jim Graham pointed out that the current formula for margin corner radii was incorrect in my blog (http://hansmuller-webkit.blogspot.com/2013/02/padding-rounded-rectangle.html). It's also currently wrong in FloatRoundedRect::marginBounds(): float boundsRadiusX = std::max(rx(), margin); float boundsRadiusY = std::max(ry(), margin); Should be: float boundsRadiusX = rx() + margin; float boundsRadiusY = ry() + margin; I've corrected the blog :-).
Attachments
Test case. (6.86 KB, text/html)
2013-03-28 12:46 PDT, Hans Muller
no flags
Screenshot of the failing test case. (65.66 KB, image/png)
2013-03-28 12:47 PDT, Hans Muller
no flags
Patch (12.02 KB, patch)
2013-03-29 11:53 PDT, Hans Muller
no flags
Hans Muller
Comment 1 2013-03-28 12:46:11 PDT
Created attachment 195621 [details] Test case.
Hans Muller
Comment 2 2013-03-28 12:47:07 PDT
Created attachment 195623 [details] Screenshot of the failing test case.
Hans Muller
Comment 3 2013-03-29 11:53:29 PDT
WebKit Review Bot
Comment 4 2013-03-29 13:32:34 PDT
Comment on attachment 195772 [details] Patch Clearing flags on attachment: 195772 Committed r147249: <http://trac.webkit.org/changeset/147249>
WebKit Review Bot
Comment 5 2013-03-29 13:32:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.