[CSS Exclusions] Incorrect margin corner radii formula https://bugs.webkit.org/show_bug.cgi?id=111186

Reviewed by Dirk Schulze.

Source/WebCore:

Corrected an error in the forumla for the margin ellipse's radii.

Tests: fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-left.html
       fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-right.html

* rendering/ExclusionRectangle.cpp:
(WebCore::FloatRoundedRect::marginBounds):

LayoutTests:

* fast/exclusions/resources/subpixel-utils.js:
(SubPixelLayout): Added an initSubPixelLayout() function so that inline test code doesn't have to wait until the DOMContentLoaded event.
* fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-left-expected.txt: Added.
* fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-left.html: Added.
* fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-right-expected.txt: Added.
* fast/exclusions/shape-outside-floats/shape-outside-floats-ellipse-margin-right.html: Added.


Canonical link: https://commits.webkit.org/131957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147249 268f45cc-cd09-0410-ab3c-d52691b4dbfc